update these maps

--- a/musicname/ze_surf_luna_v3_f4.cfg
+++ b/musicname/ze_surf_luna_v3_f4.cfg
@@ -3,4 +3,6 @@
     "css_akihabara.mp3"             "roseboi - Akihabara"
     "css_hated.mp3"                 "roseboi - ненавижу"
     "css_shinkai.mp3"               "roseboi - shinkai"
+    "bonus_pulsar.mp3"              "UMBASA - PULSAR"
+    "bonus_evil ai.mp3"             "YOHYOSAN - EVIL AI"
 }
