--- a/musicname/ze_surf_charge_v2_f2.cfg
+++ b/musicname/ze_surf_charge_v2_f2.cfg
@@ -1,8 +1,12 @@
 "music"
 {
-    "s2_1_rage mode_u1.mp3"                "Westliberty's - Rage Mode"
-    "s2_2_swamp_u1.mp3"                    "Westliberty's - Swamp"
-    "s2_3_you are on my scope_u1.mp3"      "Westliberty's - You Are on My Scope"
-    "s2_4_fate.mp3"                        "Westliberty's - Fate"
-    "s2_event_carnage.mp3"                 "Westliberty's - Carnage"
+    "s2_1_rage mode_u1.mp3"                 "Westliberty's - Rage Mode"
+    "s2_2_swamp_u1.mp3"                     "Westliberty's - Swamp"
+    "s2_3_you are on my scope_u1.mp3"       "Westliberty's - You Are on My Scope"
+    "s2_4_fate.mp3"                         "Westliberty's - Fate"
+    "s2_event_carnage.mp3"                  "Westliberty's - Carnage"
+    "s4_1_violation.mp3"                    "SCARFER & Apoc Krysis - Violation"
+    "s4_2_faster than death_u.mp3"          "SCARFER - Faster Than Death"
+    "s4_3_terror u know.mp3"                "SCARFER & MASKFACE CRICK - TERROR U KNOW"
+    "s4_4_no remorse.mp3"                   "KARTER DARK - NO REMORSE (feat. MASKFACE CRICK)"
 }
