--- a/musicname/ze_ffxii_mt_bur_omisace_v6_beta6fix.cfg
+++ b/musicname/ze_ffxii_mt_bur_omisace_v6_beta6fix.cfg
@@ -21,7 +21,7 @@
     "pendulum_colourfast_v2.mp3"                                "Pendulum - Colourfast (Like A Version)"
     "maduk_poison.mp3"                                          "Maduk - Poison"
     "what_it_feels_like_(zardonic_remix)_shorter_low.mp3"       "Markus Schukowski - What It Feels Like (Zardonic Remix)"
-  //"back_to_you.mp3"                                           "MUZZY & Voicians - Back To You"
+  //"back_to_you.mp3"                                           "Muzzy & Voicians - Back To You"
     "remnant_2_faerinfaelin_low.mp3"                            "Remnant 2 OST - The Imposter Kings"
     "the_bringer_of_justice.mp3"                                "Antti Martikainen - The Bringer of Justice"
     "onward.mp3"                                                "Antti Martikainen - Onward!"
