--- a/musicname/ze_ffxii_mt_bur_omisace_v6fix.cfg
+++ b/musicname/ze_ffxii_mt_bur_omisace_v6fix.cfg
@@ -17,9 +17,9 @@
   //"voicians_uncharted.mp3"                                    "Voicians - Uncharted"
 
     // Ultimate
-    "muzzy_in_the_night.mp3"                                    "MUZZ - In The Night (ft. Sullivan King)"
-    "muzz_star_glide.mp3"                                       "MUZZ - Star Glide (ft. Cammie Robinson)"
-    "muzzy_back_to_you.mp3"                                     "MUZZ - Back To You"
+    "muzzy_in_the_night.mp3"                                    "Muzzy - In The Night (ft. Sullivan King)"
+    "muzz_star_glide.mp3"                                       "Muzzy - Star Glide (ft. Cammie Robinson)"
+    "muzzy_back_to_you.mp3"                                     "Muzzy - Back To You"
     "what_it_feels_like_(zardonic_remix)_shorter_low.mp3"       "Markus Schukowski - What It Feels Like (Zardonic Remix)"
     "remnant_2_faerinfaelin_low2.mp3"                           "Remnant 2 OST - The Imposter Kings"
     "onward.mp3"                                                "Antti Martikainen - Onward!"
