--- a/musicname/ze_surf_dark_fantasy_v1.cfg
+++ b/musicname/ze_surf_dark_fantasy_v1.cfg
@@ -3,7 +3,7 @@
     "headhunterz feat. kshmr - dharma (extended mix).mp3"                       "Headhunterz & KSHMR - Dharma"
     "julian jordan - pilot.mp3"                                                 "Julian Jordan - Pilot"
     "mix_creepergirl.mp3"                                                       "Domastic - Khalas , Wubbaduck - Rush"
-    "muzzy - new age (feat. celldweller) [monstercat release].mp3"              "Muzzy - New Age (ft. Celldweller)"
+    "Muzzy - new age (feat. celldweller) [monstercat release].mp3"              "Muzzy - New Age (ft. Celldweller)"
     "red zone remix - error.mp3"                                                "Red Zone Remix - error"
     "animal rights - rain 711.mp3"                                              "Animal Rights - Rain 7.11"
     "droeloe feat. nevve - backbone.mp3"                                        "DROELOE - BACKBONE (ft. Nevve)"
