--- a/musicname/zs_obj_npst_v14.cfg
+++ b/musicname/zs_obj_npst_v14.cfg
@@ -15,11 +15,11 @@
     "npst_musicv13_4.mp3"       "Paul Udarov & Aquiline Scope - Ashes, Paul Udarov & VOICIANS - Inside"
     "npst_musicv13_5.mp3"       "Paul Udarov - Furious / Anti-Hero"
     "npst_musicv13_6.mp3"       "Bring Me The Horizon - Follow You (Instrumental)"
-    "npst_musicv13_7.mp3"       "MUZZ - Start Again (Lexurus & Dualistic Remix), MUZZ - The Warehouse (ft. PAV4N & Miss Trouble), RIOT - Down With Your Love (REAPER Remix)"
-    "npst_musicv13_8.mp3"       "MUZZ & Koven & Feint - Worth The Lie"
+    "npst_musicv13_7.mp3"       "Muzzy - Start Again (Lexurus & Dualistic Remix), "Muzzy - The Warehouse (ft. PAV4N & Miss Trouble), RIOT - Down With Your Love (REAPER Remix)"
+    "npst_musicv13_8.mp3"       "Muzzy & Koven & Feint - Worth The Lie"
     "npst_musicv13_8bis.mp3"    "REAPER - BARRICADE, REAPER - BARRICADE (Justin Hawkes Remix)"
-    "npst_musicv13_9.mp3"       "MUZZ & Delta Heavy - Revenge (Reaper Remix), MUZZ - Horsepower / Lost Forever / Spectrum, MUZZ & Flite - Elevate (ft. Miss Trouble)"
-    "npst_music_6.mp3"          "MUZZ - Children of Hell / Get Crazy / Play (ft. UK:ID) / Junction Seven"
+    "npst_musicv13_9.mp3"       "Muzzy & Delta Heavy - Revenge (Reaper Remix), "Muzzy - Horsepower / Lost Forever / Spectrum, "Muzzy & Flite - Elevate (ft. Miss Trouble)"
+    "npst_music_6.mp3"          "Muzzy - Children of Hell / Get Crazy / Play (ft. UK:ID) / Junction Seven"
 
     // Darksynth
     "npst_music2_1.mp3"         "Turboslash - Streetfire"
