--- a/musicname/zs_station_mall_v3.cfg
+++ b/musicname/zs_station_mall_v3.cfg
@@ -1,7 +1,7 @@
 "music"
 {
     "good_luck.mp3"                 "Celldweller - Good Luck (You're Fucked)"
-    "inthenight.mp3"                "MUZZ - In The Night (ft. Sullivan King)"
+    "inthenight.mp3"                "Muzzy - In The Night (ft. Sullivan King)"
     "nobushi.mp3"                   "Reach - Nobushi"
     "numbers.mp3"                   "Memtrix - Numbers"
     "pushtheline.mp3"               "The Qemists - Push The Line (ft. Charlie Rhymes)"
