--- a/musicname/ze_ffvii_malgo_reactor_css5.cfg
+++ b/musicname/ze_ffvii_malgo_reactor_css5.cfg
@@ -21,9 +21,9 @@
     "pendulum_witchcraft.mp3"                   "Pendulum - Witchcraft"
     "prey_sub_focus_illuminate.mp3"             "Sub Focus & Wilkinson - Illuminate"
     "rmzs_boss.mp3"                             "Muzzy - Play (ft. UK:ID)"
-    "rmzs_end.mp3"                              "MUZZ - Endgame"
-    "rmzs_first.mp3"                            "MUZZ - Junction Seven"
-    "rmzs_second.mp3"                           "MUZZ - Play (ft. UK:ID), Muzzy & Voicians - Back To You"
+    "rmzs_end.mp3"                              "Muzzy - Endgame"
+    "rmzs_first.mp3"                            "Muzzy - Junction Seven"
+    "rmzs_second.mp3"                           "Muzzy - Play (ft. UK:ID), Muzzy & Voicians - Back To You"
     "rusko_everyday.mp3"                        "Rusko - Everyday"
     "simple_plan_take_my_hand.mp3"              "Simple Plan - Take My Hand"
     "skillet_out_of_hell.mp3"                   "Skillet - Out Of Hell"
