--- a/musicname/zs_obj_npst_v7.cfg
+++ b/musicname/zs_obj_npst_v7.cfg
@@ -5,7 +5,7 @@
     "npst_music_3.mp3"      "Dreissk - Revenge (State of Decay OST)"
     "npst_music_4.mp3"      "H1Z1: King of the Kill OST - Final Battle (1v1 Music)"
     "npst_music_5.mp3"      "Pendulum - Granite"
-    "npst_music_6.mp3"      "MUZZ - Children of Hell / Get Crazy / Play (ft. UK:ID) / Junction Seven"
+    "npst_music_6.mp3"      "Muzzy - Children of Hell / Get Crazy / Play (ft. UK:ID) / Junction Seven"
     "npst_music_7.mp3"      "Blue Stahli - The Destroyer of All Things"
     "npst_music_8.mp3"      "Dos Brains - Toxic Rain"
     "npst_music_9.mp3"      "Steve Jablonsky - Battle (Transformers 3 OST)"
