--- a/musicname/zs_obj_npst_v12.cfg
+++ b/musicname/zs_obj_npst_v12.cfg
@@ -16,7 +16,7 @@
     "npst_musicv13_6.mp3"               "Bring Me The Horizon - Follow You (Instrumental)"
     "npst_musicv13_7.mp3"               "Muzzy - Start Again (Lexurus & Dualistic Remix) / The Warehouse (ft. PAV4N & Miss Trouble), RIOT - Down With Your Love (REAPER Remix)"
     "npst_musicv13_8.mp3"               "Muzzy & Koven & Feint - Worth The Lie"
-    "npst_musicv13_9.mp3"               "Muzzy - Revent (Reaper Remix) / Revenge / Horsepower / Lost Forever, "Muzzy & Flite - Elevate (ft. Miss Trouble)"
+    "npst_musicv13_9.mp3"               "Muzzy - Revent (Reaper Remix) / Revenge / Horsepower / Lost Forever, Muzzy & Flite - Elevate (ft. Miss Trouble)"
     "npst_music_6.mp3"                  "Muzzy - Children of Hell / Get Crazy / Play (ft. UK:ID) / Junction Seven"
 
     // Darksynth
