fix these while debugging

--- a/musicname/ze_ffvii_mako_reactor_v5_3.cfg
+++ b/musicname/ze_ffvii_mako_reactor_v5_3.cfg
@@ -28,7 +28,7 @@
     "ffvii_e2_thefountain.mp3"              "Pendulum - The Fountain"
     "ffvii_tempest.mp3"                     "Pendulum - The Tempest (Live at Brixton Academy)"
     "ffvii_9000miles.mp3"                   "Pendulum - 9000 Miles (Live at Brixton Academy)"
-    "muzzy_mix.mp3"                         "Muzzy - Endgame, Muzzy - Get Crazy, Muzzy & Voicians - Back to You"
+    "muzzy_mix.mp3"                         "Muzzy - Endgame / Get Crazy, Muzzy & Voicians - Back to You"
     "muzzy_play.mp3"                        "Muzzy - Play (ft. UK:ID)"
     "muzzy_play2.mp3"                       "Muzzy - Play (ft. UK:ID)"
     "muzzy_endgame.mp3"                     "Muzzy - Endgame"
