--- a/musicname/ze_ffvii_malgo_reactor_css4_2.cfg
+++ b/musicname/ze_ffvii_malgo_reactor_css4_2.cfg
@@ -32,7 +32,7 @@
     "zed_second.mp3"                        "The Prodigy - Nasty (Spor Remix)"
     "rmzs_boss_001_new.mp3"                 "Muzzy - Play (ft. UK:ID)"
     "rmzs_end_001.mp3"                      "Muzzy - Endgame"
-    "rmzs_first_001.mp3"                    "Muzzy - Endgame, Muzzy - Get Crazy"
+    "rmzs_first_001.mp3"                    "Muzzy - Endgame / Get Crazy"
     "rmzs_second_001_new.mp3"               "Nuzzy - Play (ft. UK:ID), Muzzy & Voicians - Back to You"
     "zed_boss.mp3"                          "Simple Plan - Take My Hand"
     "zeddys_boss.mp3"                       "The Qemists - No More"
