update these for consistency

--- a/musicname/ze_abyssal_temple_grounds_v1fix.cfg
+++ b/musicname/ze_abyssal_temple_grounds_v1fix.cfg
@@ -1,7 +1,7 @@
 "music"
 {
     "s1_endsongfix.mp3"             "Two Steps From Hell - Atlantis"
-    "s1_startsongnew.mp3"           "The Lord of the Rings: The Two Towers OST - Evenstar"
+    "s1_startsongnew.mp3"           "LOTR: The Two Towers OST - Evenstar"
     "s2_2ndstartsong.mp3"           "Epic Score - Brace Yourself"
     "s2_bossong.mp3"                "Two Steps From Hell - Stormkeeper"
     "s2_endsongfix.mp3"             "Epic North - Disruptor"
