--- a/musicname/ze_serpentis_temple_v2a.cfg
+++ b/musicname/ze_serpentis_temple_v2a.cfg
@@ -12,7 +12,7 @@
     "mgs2 - theme.mp3"                                      "Metal Gear Solid 2 OST - Main Theme"
     "mgs3 - theme.mp3"                                      "Metal Gear Solid 3 OST - Main Theme"
     "run boy run - instrumental (woodkid).mp3"              "Woodkid - Run Boy Run (Instrumental)"
-    "stage5_final.mp3"                                      "Metal Gear Solid 2 Sountrack - Main Theme"
+    "stage5_final.mp3"                                      "Metal Gear Solid 2 OST - Main Theme"
     "sw - final duel.mp3"                                   "Star Wars VI - The Final Duel"
     "tsfh - flameheart.mp3"                                 "Two Steps From Hell - Flameheart"
     "what shall we die for extended.mp3"                    "Hans Zimmer - What Shall We Die For"
