--- a/musicname/ze_shroomforest2_v1.cfg
+++ b/musicname/ze_shroomforest2_v1.cfg
@@ -14,7 +14,7 @@
     "duke nukem forever theme song.mp3"             "Duke Nukem Forever Theme Song"
     "megadeth - into the lungs of hell.mp3"         "Megadeth - Into The Lungs Of Hell"
     "cod mw2 - boneyard fly by.mp3"                 "Hans Zimmer - Code of Conduct"
-    "tloz twilight princess - diababa.mp3"          "TLOZ Twilight Princess - Diababa"
+    "tloz twilight princess - diababa.mp3"          "The Legend Of Zelda: Twilight Princess - Diababa"
     "muumimetallia 1.mp3"                           "Tolkuton - Muumimetallia 1"
     "megadeth - dialectic chaos.mp3"                "Megadeth - Dialectic Chaos"
     "master orders - stage select.mp3"              "Smash Bros - Master Orders Stage Select"
