--- a/musicname/ze_shroomforest3_b6_2.cfg
+++ b/musicname/ze_shroomforest3_b6_2.cfg
@@ -19,16 +19,16 @@
     "medievil soundtrack 07 - scarecrow fields.mp3"                                         "Medievil OST - Scarecrow Fields"
     "nazi german hardcore hell march.mp3"                                                   "Nazi German Hardcore Hell March"
     "opening - donkey kong.mp3"                                                             "Shota Kageyama - Opening - Donkey Kong"
-    "pokemon gold-silver-crystal - champion battle theme guitar cover.mp3"                  "Pokemon Gold, Silver & Crystal OST - Champion Battle Theme (Guitar Cover)"
-    "pokemon gold-silver-crystal - dark cave guitar cover.mp3"                              "Pokemon Gold, Silver & Crystal OST - Dark Cave (Guitar Cover)"
-    "pokemon gold-silver-crystal - rival battle theme metal cover.mp3"                      "Pokemon Gold, Silver & Crystal OST - Rival Battle Theme (Metal Cover)"
-    "pokemon gold-silver-crystal - wild pokemon battle guitar cover.mp3"                    "Pokemon Gold, Silver & Crystal OST - Wild Pokemon Battle (Guitar Cover)"
-    "pokemon red-blue-yellow - battle theme metal.mp3"                                      "Pokemon Red, Blue & Yellow OST - Battle Theme (Metal Cover)"
-    "pokemon silver-gold-crystal - dark cave.mp3"                                           "Pokemon Gold, Silver & Crystal OST - Dark Cave"
-    "pokemon silver-gold-crystal - gym leader battle.mp3"                                   "Pokemon Gold, Silver & Crystal OST - Gym Leader Battle"
-    "pokemon silver-gold-crystal - gym.mp3"                                                 "Pokemon Gold, Silver & Crystal OST - Gym"
-    "pokemon silver-gold-crystal - route 38.mp3"                                            "Pokemon Gold, Silver & Crystal OST - Route 38"
-    "pokemon silver-gold-crystal - violet city-olivine city.mp3"                            "Pokemon Gold, Silver & Crystal OST - Violet City-Olivine City"
+    "pokemon gold-silver-crystal - champion battle theme guitar cover.mp3"                  "Pokémon Gold, Silver & Crystal OST - Champion Battle Theme (Guitar Cover)"
+    "pokemon gold-silver-crystal - dark cave guitar cover.mp3"                              "Pokémon Gold, Silver & Crystal OST - Dark Cave (Guitar Cover)"
+    "pokemon gold-silver-crystal - rival battle theme metal cover.mp3"                      "Pokémon Gold, Silver & Crystal OST - Rival Battle Theme (Metal Cover)"
+    "pokemon gold-silver-crystal - wild pokemon battle guitar cover.mp3"                    "Pokémon Gold, Silver & Crystal OST - Wild Pokemon Battle (Guitar Cover)"
+    "pokemon red-blue-yellow - battle theme metal.mp3"                                      "Pokémon Red, Blue & Yellow OST - Battle Theme (Metal Cover)"
+    "pokemon silver-gold-crystal - dark cave.mp3"                                           "Pokémon Gold, Silver & Crystal OST - Dark Cave"
+    "pokemon silver-gold-crystal - gym leader battle.mp3"                                   "Pokémon Gold, Silver & Crystal OST - Gym Leader Battle"
+    "pokemon silver-gold-crystal - gym.mp3"                                                 "Pokémon Gold, Silver & Crystal OST - Gym"
+    "pokemon silver-gold-crystal - route 38.mp3"                                            "Pokémon Gold, Silver & Crystal OST - Route 38"
+    "pokemon silver-gold-crystal - violet city-olivine city.mp3"                            "Pokémon Gold, Silver & Crystal OST - Violet City-Olivine City"
     "spooky scary skeletons (remix) - extended mix.mp3"                                     "Spooky Scary Skeletons (Remix) - Extended Mix"
     "super paper mario - im not nice.mp3"                                                   "Super Paper Mario OST - I'm Not Nice"
     "the binding of isaac - my innermost apocalypse.mp3"                                    "The Binding of Isaac OST - My Innermost Apocalypse"
