--- a/musicname/ze_shroomforest_v4_5.cfg
+++ b/musicname/ze_shroomforest_v4_5.cfg
@@ -11,8 +11,8 @@
     "megadeth - duke nukem theme.mp3"                                           "Megadeth - Duke Nukem Theme"
     "opening - donkey kong.mp3"                                                 "Super Smash Bros. Wii U OST - Opening (Donkey Kong)"
     "pokefloats.mp3"                                                            "Super Smash Bros. Melee OST - Poké Floats"
-    "pokemon - reshiram & zekrom.mp3"                                           "Pokemon Black & White OST - Reshiram & Zekrom"
-    "pokemon gameboy music.mp3"                                                 "Pokemon Gameboy OST - Gym Leader Battle Theme"
+    "pokemon - reshiram & zekrom.mp3"                                           "Pokémon Black & White OST - Reshiram & Zekrom"
+    "pokemon gameboy music.mp3"                                                 "Pokémon Gameboy OST - Gym Leader Battle Theme"
     "stickerbrush symphony.mp3"                                                 "Donkey Kong Country 2 OST - Stickerbush Symphony"
     "super paper mario music_ mimi battle.mp3"                                  "Super Paper Mario OST - Mimi Battle"
     "super paper mario soundtrack - evil king bowser_ here!.mp3"                "Super Paper Mario OST - Evil King Bowser Here"
