--- a/musicname/zs_obj_event_horizon_v5.cfg
+++ b/musicname/zs_obj_event_horizon_v5.cfg
@@ -1,12 +1,12 @@
 "music"
 {
-    "zs_song_00a.mp3"                   "God Is An Astronaut - Paradise Remains"
-    "zs_song_01c.mp3"                   "God Is An Astronaut - Helios Erebus"
-    "zs_song_02.mp3"                    "God Is An Astronaut - Suicide by Star"
-    "zs_song_04.mp3"                    "God Is An Astronaut - Twilight"
-    "zs_song_05.mp3"                    "God Is An Astronaut - Shores of Orion"
-    "zs_song_06.mp3"                    "God Is An Astronaut - Worlds in Collision"
-    "zs_song_07.mp3"                    "God Is An Astronaut - Transmissions"
+    "zs_song_00a.mp3"                   "God Is an Astronaut - Paradise Remains"
+    "zs_song_01c.mp3"                   "God Is an Astronaut - Helios Erebus"
+    "zs_song_02.mp3"                    "God Is an Astronaut - Suicide by Star"
+    "zs_song_04.mp3"                    "God Is an Astronaut - Twilight"
+    "zs_song_05.mp3"                    "God Is an Astronaut - Shores of Orion"
+    "zs_song_06.mp3"                    "God Is an Astronaut - Worlds in Collision"
+    "zs_song_07.mp3"                    "God Is an Astronaut - Transmissions"
     "zs_song_08.mp3"                    "God Is an Astronaut - Reverse World"
     "zs_song_08a.mp3"                   "God Is an Astronaut - Strange Steps"
     "zs_song_bm_tension.mp3"            "Black Mesa OST - Surface Tension 3"
