--- a/musicname/zs_obj_horizons_a3.cfg
+++ b/musicname/zs_obj_horizons_a3.cfg
@@ -7,12 +7,12 @@
     "horizons_song_dissolvedgirl.mp3"           "Massive Attack - Dissolved Girl"
     "horizons_song_echoplex.mp3"                "Nine Inch Nails - Echoplex"
     "horizons_song_evendeeper.mp3"              "Nine Inch Nails - Even Deeper"
-    "horizons_song_paradiseremains.mp3"         "God Is An Astronaut - Paradise Remains"
-    "horizons_song_spiralcode.mp3"              "God Is An Astronaut - Spiral Code"
+    "horizons_song_paradiseremains.mp3"         "God Is an Astronaut - Paradise Remains"
+    "horizons_song_spiralcode.mp3"              "God Is an Astronaut - Spiral Code"
     "horizons_song_tdtwwa_sting.mp3"            "Nine Inch Nails - The Day The World Went Away"
     "horizons_song_thefragile.mp3"              "Nine Inch Nails - We're In This Together"
     "horizons_song_theideaofyou.mp3"            "Nine Inch Nails - The Idea of You"
-    "horizons_song_twilight_f.mp3"              "God Is An Astronaut - Twilight"
+    "horizons_song_twilight_f.mp3"              "God Is an Astronaut - Twilight"
     "horizons_song_whatcomesback.mp3"           "Trent Reznor & Atticus Ross - What Comes Back"
     "horizons_song_win.mp3"                     "Death In Vegas - Flying"
 }
