--- a/musicname/ze_ffvii_cosmo_canyon_v2_1.cfg
+++ b/musicname/ze_ffvii_cosmo_canyon_v2_1.cfg
@@ -17,7 +17,7 @@
     "ffvii_granitev2.mp3"                       "Pendulum - Granite (Live At Brixton Academy)"
     "ffvii_hurry.mp3"                           "FFVII OST - Hurry"
     "ffvii_conflict.mp3"                        "Takeharu Ishimoto - Conflict"
-    "ffvii_battle_themev2.mp3"                  "FX HD Remaster OST - Battle Theme"
+    "ffvii_battle_themev2.mp3"                  "FFX HD Remaster OST - Battle Theme"
     "ffvii_advent_children.mp3"                 "FFVII: Advent Children OST - Those Who Fight Further"
     "ffvii_witchcraft.mp3"                      "Pendulum - Witchcraft (Live at Glastonbury 2011)"
     "ffvii_salt_in_the_wounds.mp3"              "Pendulum - Salt in the Wounds"
