--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,11 +13,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        persist-credentials: false
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'  # Adjust the Python version if needed
+        python-version: '3.9'
 
     - name: Install dependencies
       run: |
@@ -26,3 +28,16 @@ jobs:
     - name: Run stats.py
       run: |
         python stats.py
+
+    - name: Configure Git
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+
+    - name: Commit and Push Changes
+      run: |
+        git add README.md
+        git commit -m "Update README.md via GitHub Actions" || echo "No changes to commit"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
