--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Commit and Push Changes
       run: |
         git add README.md
-        git commit -m "Update README.md via GitHub Actions" || echo "No changes to commit"
+        git commit -m "Update README.md Statistics" || echo "No changes to commit"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
