--- a/.github/workflows/updatestats.yml
+++ b/.github/workflows/updatestats.yml
@@ -3,7 +3,7 @@ name: Update Stats
 on:
   push:
     branches:
-      - Main
+      - main
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
       with:
-        persist-credentials: True
+        persist-credentials: true
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -34,6 +34,6 @@ jobs:
       run: |
         git add README.MD
         git commit -m "Update README.MD Statistics" || echo "No changes to commit"
-        git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
+        git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
