--- a/musicname/ze_debugconfig.cfg
+++ b/musicname/ze_debugconfig.cfg
@@ -1,38 +1,80 @@
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
-ff.mp3 "ffx"
+"music"
+{
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_1_ffvii_opening_theme_bombing_mission_a.mp3"            "FFVII Opening Theme - Bombing Mission"
+    "1e_2_ffvii_opening_theme_bombing_mission_b.mp3"            "FFVII Opening Theme - Bombing Mission"
+
+}
