--- a/musicname/ze_tibia_v4_1s3.cfg
+++ b/musicname/ze_tibia_v4_1s3.cfg
@@ -6,9 +6,9 @@
     "escape the fate - one for the money.mp3"           "Escape the Fate - One For The Money"
     "ffvii crisis core encounter.mp3"                   "FFVII Crisis Core OST - Encounter"
     "get out of here.mp3"                               "Charlie Ryan - Get Out Of Here"
-    "Muzzy - spectrum.mp3"                              "Muzzy - Spectrum"
+    "muzzy - spectrum.mp3"                              "Muzzy - Spectrum"
     "muzzy_endgame.mp3"                                 "Muzzy - Endgame"
-    "Muzzy - lost forever.mp3"                          "Muzzy - Lost Forever"
+    "muzzy - lost forever.mp3"                          "Muzzy - Lost Forever"
     "metrik - we are the energy.mp3"                    "Metrik - We Are The Energy"
     "leader - warrior inside.mp3"                       "Leader - Warrior Inside"
     "everything.mp3"                                    "Mick Gordan - Everything Is Going To Be Okay"
