debug new linter

--- a/musicname/ze_harry_potter_v2_1.cfg
+++ b/musicname/ze_harry_potter_v2_1.cfg
@@ -30,9 +30,9 @@
     "xxstg10beginningx.mp3"                 "Deus Ex: Human Revolution OST - LIMB Clinic"
     "xxstg10cityreturnx.mp3"                "Harry Potter and the Deathly Hallows OST - Harry Vs Voldemort - The End"
     "xxstg10endingxx.mp3"                   "Veigar Margeirsson - Champion"
-    "xxstg10ministage1x"                    "Trailerhead - The Reluctant Warrior"
-    "xxstg10ministage2x"                    "Immediate Music - Barbarians At The Gate"
-    "xxstg10ministage3x"                    "Immediate Music - One Man's Courage"
+    "xxstg10ministage1x.mp3"                "Trailerhead - The Reluctant Warrior"
+    "xxstg10ministage2x.mp3"                "Immediate Music - Barbarians At The Gate"
+    "xxstg10ministage3x.mp3"                "Immediate Music - One Man's Courage"
     "xxstg10ministagelastx.mp3"             "Immediate Music - Fury Unleashed"
     "xxstg11beginningx.mp3"                 "Audiomachine - Helios"
     "xxstg11bossfightspiderxx.mp3"          "Lorenzo Piggici - Carved From Fire"
