--- a/musicname/ze_m0w0m_b2.cfg
+++ b/musicname/ze_m0w0m_b2.cfg
@@ -9,7 +9,7 @@
     "bgm_lvl3fourth.mp3"            "Waterflame - Commitment"
     "bgm_lvl3second.mp3"            "Super Smash Bros. Melee - Multi-Man Melee 2"
     "bgm_lvl3third.mp3"             "Waterflame - Starfall"
-    "bgm_lvl3miniboss"              "Super Smash Bros. Melee - Multi-Man Melee 2"
+    "bgm_lvl3miniboss.mp3"          "Super Smash Bros. Melee - Multi-Man Melee 2"
   //"bgm_lvl3boss1.mp3"             ""
   //"bgm_lvl3boss2.mp3"             ""
     "bgm_lvl3end.mp3"               "xi - Angelic Party"
