--- a/musicname/zs_a_slice_of_shop_v1.cfg
+++ b/musicname/zs_a_slice_of_shop_v1.cfg
@@ -3,7 +3,7 @@
   //"evechill.mp3"                      ""
     "fancymel.mp3"                      "Dewprism OST - Fancy Mel"
     "hipshop.mp3"                       "Deltarune OST - Hip Shop"
-    "lexadelirum"                       "Sewerslvt - Lexapro Delirium"
+    "lexadelirum.mp3"                   "Sewerslvt - Lexapro Delirium"
     "onceuponadecemberremix.mp3"        "A.Krishna - Once Upon a December (Ethereal Remix)"
     "windmill.mp3"                      "Tales of Vesperia OST - Playing With The Wind"
 }
