--- a/musicname/zs_crimson_forest_remix.cfg
+++ b/musicname/zs_crimson_forest_remix.cfg
@@ -1,6 +1,6 @@
 "music"
 {
-    "c418_balladofthecatsmp3"           "C418 - Ballad of The Cats"
+    "c418_balladofthecats.mp3"          "C418 - Ballad of The Cats"
     "c418_concretehalls.mp3"            "C418 - Concrete Halls"
     "c418_deadvoxel.mp3"                "C418 - Dead Voxel"
     "c418_warmth.mp3"                   "C418 - Warmth"
