--- a/musicname/zs_placid_rev_v1b.cfg
+++ b/musicname/zs_placid_rev_v1b.cfg
@@ -1,7 +1,7 @@
 "music"
 {
     "stage1gonarch.mp3"             "Black Mesa: Xen OST - Lair"
-    "stage2gonarch,mp3"             "Black Mesa: Xen OST - Alien"
+    "stage2gonarch.mp3"             "Black Mesa: Xen OST - Alien"
     "stage3gonarch.mp3"             "Black Mesa: Xen OST - The Hunting"
     "stage4gonarch.mp3"             "Black Mesa: Xen OST - Internal Conflict"
     "waltz.mp3"                     "Half-Life: Alyx OST - Trash Compactor Waltz"
