fix these files while working

--- a/musicname/ze_eerie_escape_redux_v2.cfg
+++ b/musicname/ze_eerie_escape_redux_v2.cfg
@@ -8,7 +8,7 @@
     "ffvii_rageawake2.mp3"          "Kingdom Hearts OST - Fate of the Unknown"
     "ffvii_tempest.mp3"             "Pendulum - Tempest"
     "invincible.mp3"                "Two Steps From Hell - Invincible"
-    "level5_end_song (1).mp3"       "Immediate Music - Dark Side Of Power"
+    "level5_end_song (1).mp3"       "Immediate Music - Dark Side of Power"
     "stage3_music2.mp3"             "Two Steps From Hell - Protectors of the Earth"
     "stage4_music1.mp3"             "Pendulum - Crush"
     "tsfh_victory.mp3"              "Two Steps From Hell - Victory"
