--- a/musicname/ze_tyranny_v5fix.cfg
+++ b/musicname/ze_tyranny_v5fix.cfg
@@ -8,7 +8,7 @@
     "lvl3boss.mp3"              "X-Ray Dog - Shadow of Tyranny"
     "lvl3end.mp3"               "Two Steps From Hell - Smell of Victory (Choir)"
     "lvl3first.mp3"             "Immediate Music - World On A String"
-    "lvl3second.mp3"            "Immediate music - Destiny Of The Chosen"
+    "lvl3second.mp3"            "Immediate Music - Destiny Of The Chosen"
     "lvl4boss.mp3"              "Immediate Music - The Conquered Shall Prevail"
     "lvl4end.mp3"               "Two Steps From Hell - United We Stand Divided We Fall"
     "lvl4first.mp3"             "Two Steps From Hell - Reborn"
