--- a/musicname/ze_sandstorm_f1.cfg
+++ b/musicname/ze_sandstorm_f1.cfg
@@ -2,7 +2,7 @@
 {
     "level1.mp3"            "John Dreamer - Brotherhood"
   //"level2_2.mp3"          ""
-    "level3.mp3"            "Immediate - Destiny of the Chosen"
+    "level3.mp3"            "Immediate Music - Destiny of the Chosen"
     "level3_2.mp3"          "Instrumental Core - We Want Glory Freedom"
     "level4.mp3"            "Magicka OST - At World's End"
     "level4_2.mp3"          "GRV Music - Fallen Army"
