--- a/musicname/ze_pkmn_adventure_v8_6s_fix2.cfg
+++ b/musicname/ze_pkmn_adventure_v8_6s_fix2.cfg
@@ -22,6 +22,6 @@
     "pokemon heartgold  soulsilver - gym leader battle! (johto).mp3"                    "Pokémon Heart Gold & Soul Silver OST - Gym Leader Battle! (Johto)"
     "pokemon heartgold  soulsilver - route 30.mp3"                                      "Pokémon Heart Gold & Soul Silver OST - Route 30"
     "pokemon heartgold  soulsilver - route 34.mp3"                                      "Pokémon Heart Gold & Soul Silver OST - Route 34"
-    "pokemon heartgold  soulsilver - routes 26  27.mp3"                                 "Pokémon Heart Gold & Soul Silver OST - Routes 26/27"
+    "pokemon heartgold  soulsilver - routes 26  27.mp3"                                 "Pokémon Heart Gold & Soul Silver OST - Routes 26 & 27"
     "pokemon heartgold  soulsilver - violet city (olivine city).mp3"                    "Pokémon Heart Gold & Soul Silver OST - Violet City (Olivine City)"
 }
