Update luciddreams (again) (again)

--- a/musicname/ze_luciddreams_b4.cfg
+++ b/musicname/ze_luciddreams_b4.cfg
@@ -1,8 +1,9 @@
 "music"
 {
-    "ahisa - logical stimulus.mp3"             "a_hisa - Logical Stimulus"
-    "artcore insensibilitv.mp3"                "AvEtaDeltaV & Lyvia - In_sensibilitv"
-    "level - practice - music.mp3"             "AvEtaDeltaV & Lyvia - In_sensibilitv"
-  //"taishi - reverie.mp3"                     "Taishi - Reverie for Another Sphere"
-    "rapidfire_loop.mp3"                       "Rapid Fire - Blue Rose"
+    "ahisa - logical stimulus.mp3"              "a_hisa - Logical Stimulus"
+    "artcore insensibilitv.mp3"                 "AvEtaDeltaV & Lyvia - In_sensibilitv"
+    "level - practice - music.mp3"              "AvEtaDeltaV & Lyvia - In_sensibilitv"
+  //"taishi - reverie.mp3"                      "Taishi - Reverie for Another Sphere"
+    "rapidfire_loop.mp3"                        "Rapid Fire - Blue Rose"
+    "aria math mqxs sickkunt remix.mp3"         "Mqx - Aria Math (Sickkunt Remix)"
 }
