--- a/musicname/ze_ffxii_mt_bur_snow_v6.cfg
+++ b/musicname/ze_ffxii_mt_bur_snow_v6.cfg
@@ -52,11 +52,11 @@
     "ffxiii_lake_bresha.mp3"                                                        "FFXIII OST - Lake Bresha"
     "ffxiii_the_l_cie_of_gran_pulse.mp3"                                            "FFXIII OST - The Gran Pulse L'Cie"
     "mark_petrie_virtus.mp3"                                                        "Mark Petrie - Virtus"
-    "marlon_hoffstadt_its_that_time.mp3"                                            "Marlon Hoffstadt - It's Tht Time (Dimensional Remix)"
+    "marlon_hoffstadt_its_that_time.mp3"                                            "Marlon Hoffstadt - It's That Time (Dimensional Remix)"
     "muzz_dont_stop.mp3"                                                            "MUZZ - Don't Stop"
     "pendulum_antihero.mp3"                                                         "Pendulum - Anti Hero"
     "pendulum_crush.mp3"                                                            "Pendulum - Crush"
-    //"pendulum_orchestra.mp3"                                                        "Pendulum - Propane Nightmares (Orchestra)"
+    //"pendulum_orchestra.mp3"                                                      ""
     "poe_eyrie.mp3"                                                                 "Path of Exile OST - Eyrie"
     "poe_stick_to_the_plan.mp3"                                                     "Path of Exile OST - Stick to the Plan"
     "the_qemists_push_the_line3.mp3"                                                "The Qemists - Push The Line (ft. Charlie Rhymes)"
