--- a/musicname/ze_ffxiv_wanderers_palace_v5_2f.cfg
+++ b/musicname/ze_ffxiv_wanderers_palace_v5_2f.cfg
@@ -6,7 +6,7 @@
   //"savage_unseen_abyss.mp3"                   "FFXIII-2 OST - Jet Bahamut (Unseen Abyss)"
   //"savage_hollow.mp3"                         "Aimer - Hollow World"
     "savage_gundam.mp3"                         "Hiroyuki Sawano - [Symphonic Suite UC2012] 5th Mov. :Gundam"
-  //"savage_copied_city.mp3"                    "NieR Automata OST - Copied City (Sequential Mix) v2"
+  //"savage_copied_city.mp3"                    "NieR: Automata OST - Copied City (Sequential Mix) v2"
     "normal_wanderes_palace_theme.mp3"          "FFXIV OST - Wanderer's Palace HM Theme"
     "normal_the_praetorium_theme.mp3"           "FFXIV OST - The Praetorium Theme (Penitus)"
     "normal_a_fine_death.mp3"                   "FFXIV OST - A Fine Death (Mid-Dungeon Boss Theme)"
