--- a/musicname/zs_obj_npst_v15.cfg
+++ b/musicname/zs_obj_npst_v15.cfg
@@ -14,7 +14,7 @@
     "npst_musicv13_3.mp3"       "VOICIANS - Telepathetic (Instrumental), Paul Udarov - Heartless (Instrumental)"
     "npst_musicv13_4.mp3"       "Paul Udarov & Aquiline Scope - Ashes, Paul Udarov & VOICIANS - Inside"
     "npst_musicv13_5.mp3"       "Paul Udarov - Furious / Anti-Hero"
-    "npst_musicv13_6.mp3"       "Bring Me The Horizon - Follow You (Instrumental)"
+    "npst_musicv13_6.mp3"       "Bring Me The Horizon - Follow You"
     "npst_musicv13_7.mp3"       "Muzzy - Start Again (Lexurus & Dualistic Remix), Muzzy - The Warehouse (ft. PAV4N & Miss Trouble), RIOT - Down With Your Love (REAPER Remix)"
     "npst_musicv13_8.mp3"       "Muzzy & Koven & Feint - Worth The Lie"
     "npst_musicv13_8bis.mp3"    "REAPER - BARRICADE, REAPER - BARRICADE (Justin Hawkes Remix)"
